fixed footer overlap

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,14 @@ h2 {
   margin: 10px 0;
 }
 
+h4 {
+  margin: 5px 0;
+}
+
+p {
+  margin: 5px 0;
+}
+
 table{
   margin: 10px 0 10px 10px;
 }
